// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayerToolbar Should match toolbar snapshot WITH Edit button 1`] = `
<WithStyles(ForwardRef(Toolbar))
  data-test="layertoolbar"
>
  <WithStyles(ForwardRef(Tooltip))
    key="edit"
    title="Edit"
  >
    <WithStyles(ForwardRef(IconButton))
      onClick={[Function]}
    >
      <CreateIcon
        data-icon="CreateIcon"
      />
    </WithStyles(ForwardRef(IconButton))>
  </WithStyles(ForwardRef(Tooltip))>
  <span />
  <WithStyles(ForwardRef(Tooltip))
    title="Toggle visibility"
  >
    <WithStyles(ForwardRef(IconButton))
      onClick={[Function]}
    >
      <VisibilityIcon
        data-icon="VisibilityIcon"
      />
    </WithStyles(ForwardRef(IconButton))>
  </WithStyles(ForwardRef(Tooltip))>
  <div>
    <WithStyles(ForwardRef(Tooltip))
      title="Set layer opacity"
    >
      <div>
        <WithStyles(OpacitySlider)
          classes={
            Object {
              "root": undefined,
            }
          }
          onChange={[Function]}
          opacity={0}
        />
      </div>
    </WithStyles(ForwardRef(Tooltip))>
  </div>
  <WithStyles(LayerToolbarMoreMenu)
    classes={
      Object {
        "button": undefined,
      }
    }
    onEdit={[Function]}
  />
</WithStyles(ForwardRef(Toolbar))>
`;

exports[`LayerToolbar Should match toolbar snapshot without Edit button 1`] = `
<WithStyles(ForwardRef(Toolbar))
  data-test="layertoolbar"
>
  <WithStyles(ForwardRef(Tooltip))
    title="Toggle visibility"
  >
    <WithStyles(ForwardRef(IconButton))
      onClick={[Function]}
    >
      <VisibilityIcon
        data-icon="VisibilityIcon"
      />
    </WithStyles(ForwardRef(IconButton))>
  </WithStyles(ForwardRef(Tooltip))>
  <div>
    <WithStyles(ForwardRef(Tooltip))
      title="Set layer opacity"
    >
      <div>
        <WithStyles(OpacitySlider)
          classes={
            Object {
              "root": undefined,
            }
          }
          onChange={[Function]}
          opacity={0}
        />
      </div>
    </WithStyles(ForwardRef(Tooltip))>
  </div>
  <WithStyles(LayerToolbarMoreMenu)
    classes={
      Object {
        "button": undefined,
      }
    }
  />
</WithStyles(ForwardRef(Toolbar))>
`;
